--- a/package.json
+++ b/package.json
@@ -1,32 +1,27 @@
 {
-  "name": "super-cars-invoicing",
+  "name": "frontend-carizo",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.1",
-    "axios": "^1.13.2",
-    "bootstrap": "^5.3.8",
-    "formik": "^2.4.6",
+    "exceljs": "^4.4.0",
+    "formik": "^2.4.9",
+    "recharts": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^11.0.5",
-    "yup": "^1.7.1"
+    "react-router-dom": "^6.30.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.8",
+    "vite": "^5.0.0"
   }
 }
